Novas informações na consulta de pedidos
